# on-hadamard-matrices-and-probabilistic-data-structures-in-neural-networks

./: .env-train  .gitignore  .pre-commit-config.yaml  00_main.tex  01_streszczenie.tex  02_abstract.tex  03_acknowlegements.tex  04_introduction.tex  05_literature_review.tex  06_automorpher_network.tex  07_results.tex  08_summary_and_conclusions.tex  999_sekcje_z_templatki.tex  99_notatki.tex  README.md  ROADMAP.md  praca-dyplomowa.cls  pyproject.toml
artifacts/: classes_mean.pkl  classes_pca_mapping.json  components_info.json  mnist_indices_mapping_test_file.json  mnist_indices_mapping_train_file.json  mnist_indices_mapping_val_file.json
bibliography/: 01.bib  05.bib
configs/: base_config.yaml
configs/data_configs/: 01-MNIST.yaml  02-MNIST-entity-mapping.yaml
configs/model_configs/01-encoding-reco/: 00-baselineFDNN.yaml  01-automorpher.yaml  01-morpher.yaml  02-depthwise-automorpher.yaml  02-morpherv2.yaml
configs/model_configs/02-classification/: 00-baselineFDNN.yaml  01-automorpher.yaml  01-morpher.yaml  02-depthwise-automorpher.yaml  02-morpherv2.yaml
configs/model_configs/hidden/: identity.yaml  one_hidden.yaml  three_hidden.yaml
configs/model_configs/other/: easy_mapping.yaml  pca_mapping.yaml  shifted_mapping.yaml
morphers/: datamodule.py  hadamard.py  io_utils.py  logger.py  utils.py
morphers/dataset/: MNIST.py  MNIST_mapped_entities.py  base.py
morphers/module/: __init__.py  mnist_classification.py  mnist_entity_mapping.py  mnist_identity.py  mnist_mapping.py  utils.py
morphers/net/: __init__.py  automorpher.py  baseline.py  depthwise_automorpher.py  interface.py  layers.py  morpher.py  morpherv2.py
scripts/: format_logs_to_latex.ipynb  get_dim_for_mnist.py  get_mappings_for_mnist.py  get_mappings_for_mnist_based_on_global_variance.py  get_variance_explained_for_mnist.py  gradient_identity_matrix.py  mnist_sparsity.py  parse_logs.py  run_all.sh  run_experiments.sh  schedule.py  train.py
